--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rickshawcalc2",
   "version": "1.0.0",
   "description": "",
-  "main": "gulp.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
